allfile/kuard-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kuard-gw
  namespace: argocd-sanjay-test
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "test-argo.apps.sonpari.lab.upshift.rdu2.redhat.com"
