allfile/kuard-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kuard-vs
  namespace: argocd-sanjay-test
spec:
  hosts:
    - "argo-sanjay-test.apps.apsara.lab.psi.pnq2.redhat.com"
  gateways:
    - kuard-gw
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: kuard
            subset: kuard-blue
          weight: 50
        - destination:
            host: kuard
            subset: kuard-green
          weight: 50
